<resources>
    <string name="app_name">Registration Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="donot_have_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="tvForgetPass">Forget password?</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
</resources>